Wrapped form and image logo into a div and split up their styling into two new classes. This fixed the form in that it's now directly under the image, center of page.

--- a/app.css
+++ b/app.css
@@ -3,17 +3,23 @@ body {
 }
 
 .form { 
-    
-   text-align: center;
-}
 
-img.logo  {
+    }
+
+div.main  {
    display: block;
     margin-left: auto;
     margin-right: auto;
-    height: 92px;
+    text-align: center;
     padding: 192px;
+   
    } 
+
+   img.logo{
+    height: 92px;
+   
+
+   }
 
    ul.head {
     list-style-type: none;
